--- a/app/index.html
+++ b/app/index.html
@@ -1,19 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="css/libs.min.css">
-  <link rel="stylesheet" href="css/style.min.css">
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Document</title>
+   <link rel="stylesheet" href="css/libs.min.css">
+   <link rel="stylesheet" href="css/style.min.css">
 </head>
+
 <body>
 
+   <header class="header" style="background-image: url(images/background.jpg);">
+      <div class="header__top">
+         <div class="header__top-inner">
+            <a class="logo" href="#">
+               <img class="logo__image" src="images/logo.png" alt="">
+            </a>
+            <nav class="menu">
+               <button class="menu__button">
+                  <img class="menu__image" src="images/menu.svg" alt="">
+               </button>
+            </nav>
+         </div>
+      </div>
+      <div class="container">
+         <div class="header__inner">
+            <div class="header__inner-title">
+               New Automation
+               Tool for Your Home
+            </div>
+            <div class="header__inner-text">
+               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus tristique vulputate ultrices ut
+               mauris tellus at. Posuere sollicitudin odio tellus elit.
+            </div>
+            <a class="header__inner-link" href="#">
+               See Our Project
+            </a>
+         </div>
+      </div>
+   </header>
 
-  
-  
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="js/libs.min.js"></script>
-  <script src="js/main.min.js"></script>
+   <section class="digital">
+      <div class="container">
+         <div class="digital__inner">
+            <div class="digital__inner-title">
+               What we do to help
+               our client grow in
+               digital era,
+            </div>
+            <div class="digital__inner-items">
+               
+               <div class="digital__inner-item">
+                  <div class="digital__inner-image">
+                     <img class="digital__inner-img" src="" alt="">
+                  </div>
+                  <div class="digital__inner-title">
+                     Make Your business To Be
+                     Better Famous In Internet
+                  </div>
+                  <div class="digital__inner-text">
+                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                     et dolore magna aliqua.
+                  </div>
+                  <a class="digital__inner-link" href="#">
+                     Learn more
+                  </a>
+               </div>
+
+               <div class="digital__inner-item">
+                  <div class="digital__inner-image">
+                     <img class="digital__inner-img" src="" alt="">
+                  </div>
+                  <div class="digital__inner-title">
+                     Make Your business To Be
+                     Better Famous In Internet
+                  </div>
+                  <div class="digital__inner-text">
+                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                     et dolore magna aliqua.
+                  </div>
+                  <a class="digital__inner-link" href="#">
+                     Learn more
+                  </a>
+               </div>
+
+               <div class="digital__inner-item">
+                  <div class="digital__inner-image">
+                     <img class="digital__inner-img" src="" alt="">
+                  </div>
+                  <div class="digital__inner-title">
+                     Make Your business To Be
+                     Better Famous In Internet
+                  </div>
+                  <div class="digital__inner-text">
+                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                     et dolore magna aliqua.
+                  </div>
+                  <a class="digital__inner-link" href="#">
+                     Learn more
+                  </a>
+               </div>
+
+
+            </div>
+         </div>
+      </div>
+   </section>
+
+
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+   <script src="js/libs.min.js"></script>
+   <script src="js/main.js"></script>
 </body>
+
 </html>
