added section digital

--- a/app/index.html
+++ b/app/index.html
@@ -44,23 +44,24 @@
    <section class="digital">
       <div class="container">
          <div class="digital__inner">
-            <div class="digital__inner-title">
+            <div class="digital__inner-head">
                What we do to help
                our client grow in
                digital era,
             </div>
             <div class="digital__inner-items">
-               
-               <div class="digital__inner-item">
+
+               <div class="digital__inner-item digital__inner-item--one">
                   <div class="digital__inner-image">
-                     <img class="digital__inner-img" src="" alt="">
+                     <img class="digital__inner-img" src="images/digital-1.png" alt="">
                   </div>
                   <div class="digital__inner-title">
                      Make Your business To Be
                      Better Famous In Internet
                   </div>
                   <div class="digital__inner-text">
-                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                     labore
                      et dolore magna aliqua.
                   </div>
                   <a class="digital__inner-link" href="#">
@@ -68,16 +69,18 @@
                   </a>
                </div>
 
+
                <div class="digital__inner-item">
                   <div class="digital__inner-image">
-                     <img class="digital__inner-img" src="" alt="">
+                     <img class="digital__inner-img" src="images/digital-2.png" alt="">
                   </div>
                   <div class="digital__inner-title">
-                     Make Your business To Be
-                     Better Famous In Internet
+                     Bring Technology To Your
+                     Comfrotable Home
                   </div>
                   <div class="digital__inner-text">
-                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                     labore
                      et dolore magna aliqua.
                   </div>
                   <a class="digital__inner-link" href="#">
@@ -85,16 +88,17 @@
                   </a>
                </div>
 
-               <div class="digital__inner-item">
-                  <div class="digital__inner-image">
-                     <img class="digital__inner-img" src="" alt="">
+               <div class="digital__inner-item digital__inner-toppy">
+                  <div class="digital__inner-image digital__inner-top">
+                     <img class="digital__inner-img" src="images/digital-3.png" alt="">
                   </div>
                   <div class="digital__inner-title">
-                     Make Your business To Be
-                     Better Famous In Internet
+                     Build Your Digital Product
+                     That Suitable For Your Need
                   </div>
                   <div class="digital__inner-text">
-                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                     labore
                      et dolore magna aliqua.
                   </div>
                   <a class="digital__inner-link" href="#">
