--- a/app/index.html
+++ b/app/index.html
@@ -112,6 +112,130 @@
       </div>
    </section>
 
+   <footer class="footer">
+      <div class="container">
+         <div class="footer__client">
+            <div class="footer__client-inner">
+               <div class="footer__client-box">
+                  <div class="footer__client-title">
+                     Our Beloved
+                     Client
+                  </div>
+                  <div class="footer__client-text">
+                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                     labore et dolore magna aliqua. Ut enim ad minim veniam.
+                  </div>
+               </div>
+
+               <ul class="footer__client-list">
+                  <li class="footer__client-name"><a class="footer__client-link" href="#">LOGO CLIENT 1</a></li>
+                  <li class="footer__client-name"><a class="footer__client-link" href="#">LOGO CLIENT 2</a></li>
+                  <li class="footer__client-name"><a class="footer__client-link" href="#">LOGO CLIENT 3</a></li>
+                  <li class="footer__client-name"><a class="footer__client-link" href="#">LOGO CLIENT 4</a></li>
+                  <li class="footer__client-name"><a class="footer__client-link" href="#">LOGO CLIENT 5</a></li>
+                  <li class="footer__client-name"><a class="footer__client-link" href="#">LOGO CLIENT 6</a></li>
+                  <li class="footer__client-name"><a class="footer__client-link" href="#">LOGO CLIENT 7</a></li>
+                  <li class="footer__client-name"><a class="footer__client-link footer__client-link--trans"
+                        href="#">More Client</a></li>
+               </ul>
+            </div>
+         </div>
+      </div>
+
+
+      <div class="footer__info">
+         <div class="container">
+            <div class="footer__team">
+               <div class="footer__team-inner">
+                  <div class="footer__team-box">
+                     <div class="footer__team-title">
+                        Intersted to woek
+                        with our team?
+                     </div>
+                     <div class="footer__team-text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam.
+                     </div>
+                  </div>
+                  <a class="footer__team-btn" href="#">
+                     Let’s Talk
+                  </a>
+               </div>
+
+
+            </div>
+
+            <div class="footer__bottom">
+               <div class="footer__bottom-inner">
+                  <div class="footer__bottom-item footer__bottom-item--left">
+                     <a class="footer__bottom-title" href="#">
+                        <img class="footer__bottom-image" src="images/footer-logo.png" alt="">
+                        Afrianska
+                     </a>
+                     <ul class="footer__bottom-list">
+                        <li class="footer__bottom-name"><a class="footer__bottom-link" href="#">
+                              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                           </a></li>
+                        <li class="footer__bottom-name"><a class="footer__bottom-link footer__bottom-tel"
+                              href="tel:6281273134321">
+                              +62-812-7313-4321
+                           </a></li>
+                        <li class="footer__bottom-name"><a class="footer__bottom-link footer__bottom-email" href="#">
+                              hello.afrian@gmail.com
+                           </a></li>
+                     </ul>
+                  </div>
+
+                  <div class="footer__bottom-item footer__bottom-item--middle">
+                     <div class="footer__bottom-head">
+                        About US
+                     </div>
+                     <ul class="footer__bottom-list">
+                        <li class="footer__bottom-names"><a class="footer__bottom-links" href="#">
+                              About
+                           </a></li>
+                        <li class="footer__bottom-names"><a class="footer__bottom-links" href="#">
+                              What We Do
+                           </a></li>
+                        <li class="footer__bottom-names"><a class="footer__bottom-links" href="#">
+                              Project
+                           </a></li>
+                        <li class="footer__bottom-names"><a class="footer__bottom-links" href="#">
+                              How It Work With Us
+                           </a></li>
+                     </ul>
+                  </div>
+
+                  <div class="footer__bottom-item footer__bottom-item--right">
+                     <div class="footer__bottom-head">
+                        Follow US
+                     </div>
+                     <ul class="footer__bottom-list">
+                        <li class="footer__bottom-names"><a class="footer__bottom-links" href="#">
+                              Instagram
+                           </a></li>
+                        <li class="footer__bottom-names"><a class="footer__bottom-links" href="#">
+                              Facebook
+                           </a></li>
+                        <li class="footer__bottom-names"><a class="footer__bottom-links" href="#">
+                              Linkedin
+                           </a></li>
+                        <li class="footer__bottom-names"><a class="footer__bottom-links" href="#">
+                              Youtube
+                           </a></li>
+                     </ul>
+                  </div>
+
+
+               </div>
+            </div>
+            <div class="footer__copy">
+               2019 © Afrianska. All rights reserved.
+            </div>
+         </div>
+      </div>
+   </footer>
+
 
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
    <script src="js/libs.min.js"></script>
