added contact page

--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-
+<div class="wrapper">
+   <div class="content">
    <header class="header" style="background-image: url(images/background.jpg);">
       <div class="header__top">
          <div class="header__top-inner">
@@ -105,12 +106,11 @@
                      Learn more
                   </a>
                </div>
-
-
             </div>
          </div>
       </div>
    </section>
+</div>
 
    <footer class="footer">
       <div class="container">
@@ -235,6 +235,8 @@
          </div>
       </div>
    </footer>
+
+</div>
 
 
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
